dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lamp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamp-app
  template:
    metadata:
      labels:
        app: lamp-app
    spec:
      containers:
        - name: lamp-web
          image: php:7.4-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: lamp-config-volume
              mountPath: /var/www/html
        - name: lamp-db
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: lamp-config-volume
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: lamp-config-volume
          configMap:
            name: lamp-config
