dev/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver   # Changed from "apache"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver   # Changed from "apache"
  template:
    metadata:
      labels:
        app: webserver   # Changed from "apache"
    spec:
      containers:
      - name: php-apache
        image: learningk8s_website
        imagePullPolicy: Never
        ports:
        - containerPort: 80
