dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lamp-service
spec:
  selector:
    app: lamp-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
