dev/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  labels:
    app: apache
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
