dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lamp-ingress
spec:
  rules:
    - host: phpapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lamp-service
                port:
                  number: 80
